AUT-6 feat: Unecessary version field removed from migrator struct

--- a/docs/postgresql/migration_examples/20230205140919_user.md
+++ b/docs/postgresql/migration_examples/20230205140919_user.md
@@ -8,20 +8,19 @@ import (
 
 func init() {
 	migrator.AddMigration(&Migration{
-		Version: "20230129225715",
-		Up:      mig_20230129225715_init_schema_up,
-		Down:    mig_20230129225715_init_schema_down,
+		Version: "20230205140919_user",
+		Up:      mig_20230205140919_user_up,
+		Down:    mig_20230205140919_user_down,
 	})
 }
 
-func mig_20230129225715_init_schema_up(db *gorm.DB) error {
-
+func mig_20230205140919_user_up(db *gorm.DB) error {
 	db.Migrator().CreateTable(&model.User{})
 	return nil
 }
 
-func mig_20230129225715_init_schema_down(db *gorm.DB) error {
+func mig_20230205140919_user_down(db *gorm.DB) error {
 	db.Migrator().DropTable(&model.User{})
 	return nil
 }
-```go
+```
