--- a/docs/postgresql/migration_examples/20230205141016_subject.md
+++ b/docs/postgresql/migration_examples/20230205141016_subject.md
@@ -8,18 +8,18 @@ import (
 
 func init() {
 	migrator.AddMigration(&Migration{
-		Version: "20230130204445",
-		Up:      mig_20230130204445_subject_creation_up,
-		Down:    mig_20230130204445_subject_creation_down,
+		Version: "20230205141016_subject",
+		Up:      mig_20230205141016_subject_up,
+		Down:    mig_20230205141016_subject_down,
 	})
 }
 
-func mig_20230130204445_subject_creation_up(db *gorm.DB) error {
+func mig_20230205141016_subject_up(db *gorm.DB) error {
 	db.Migrator().CreateTable(&model.Subject{})
 	return nil
 }
 
-func mig_20230130204445_subject_creation_down(db *gorm.DB) error {
+func mig_20230205141016_subject_down(db *gorm.DB) error {
 	db.Migrator().DropTable(&model.Subject{})
 	return nil
 }
